# ontoweaver

./: .gitignore  .readthedocs.yaml  README.md  RELEASE.md  __init__.py  base.py  generators.py  make_doc.sh  pyproject.toml  tabular.py
.github/workflows/: ci.yaml  publish.yaml  tests.yaml
docs/: README.rst  conf.py  features_comparison.ods  index.rst  keywords_from_code.py  ontoweaver.rst  overview.rst  requirements.txt  tools.rst
docs/readme_sections/: data_validation.rst  glob.rst  how_to.rst  information_fusion.rst  installation_and_quick_setup_guide.rst  introductions.rst  iterable_data.rst  mapping_api.rst  overview.rst  parallel_processing.rst  tutorials.rst  usage.rst  user_made_transformers.rst
docs/sections/: FAQ.rst  about.rst  comparison.rst  data_validation.rst  glob.rst  how_to.rst  information_fusion.rst  install.rst  intro_SKG.rst  introductions.rst  iterable_data.rst  mapping_api.TPL.rst  mapping_api.rst  processing.rst  tutorials.rst  usage.rst  user_made_transformers.rst
ontoweaver/: tabular.py
src/ontoweaver/: __init__.py  base.py  biocypher_to_owl.py  congregate.py  errormanager.py  exceptions.py  fuse.py  fusion.py  generators.py  iterative.py  json.py  loader.py  make_labels.py  make_value.py  mapping.py  merge.py  ontoweave  ontoweave.py  owl.py  owl_to_biocypher.py  select_create.py  serialize.py  tabular.py  transformer.py  types.py  validate.py  xml.py
src/preprocessing/: preprocess_ontology.py
src/tools/: __init__.py  biocypher_to_owl.py  ontoweave.py  owl_to_biocypher.py  preprocess_ontology.py
tests/: __init__.py  test_2_databases.py  test_2ontologies.py  test_affix_separator.py  test_article.py  test_bug_lost_type.py  test_congregate.py  test_custom_transformer.py  test_edge_direction.py  test_edges_between_columns.py  test_extract_reconciliate_write.py  test_final_type.py  test_from_subject.py  test_full_example.py  test_full_fledged_demo.py  test_fuse.py  test_fusion.py  test_json.py  test_loader.py  test_map_remove_forbidden_characters.py  test_merge.py  test_merger_Function.py  test_mixin.py  test_multi_type_transformer.py  test_multiple_databases.py  test_node_type_fusion.py  test_oncokb.py  test_oncokb_article.py  test_ontology_subtypes.py  test_ontoweave.py  test_output_validation.py  test_owladapter.py  test_parallel_mapping.py  test_properties_metadata.py  test_reconciliate.py  test_replace.py  test_reverse_edge.py  test_serialize.py  test_simplest.py  test_singular-plural.py  (+14 more)
tests/affix_separator/: biocypher_config.yaml  mapping.yaml  schema_config.yaml
tests/article/: biocypher_config.yaml  cgi.yaml  data_cgi_article.csv  oncokb.yaml  schema_config.yaml
tests/autoschema/: biocypher_config.yaml  example.csv  extended_schema.yaml  mapping.yaml  mapping_with_props.yaml  ontology.ttl  schema_complete.yaml  schema_half.yaml  schema_min.yaml
tests/bug_lost_type/: data.csv  mapping.yaml
tests/custom_transformer/: biocypher_config.yaml  custom.py  data.tsv  mapping.yaml  schema_config.yaml
tests/demo/: config.yaml  data.json  demo.ttl  mapping.yaml  schema.yaml
tests/edge_direction/: data.csv  mapping.yaml
tests/edges_between_columns/: data.csv  mapping.yaml  schema_config.yaml  types.py
tests/family_automap/: biocypher_config_2_bioPathNet.yaml  reasoned.ttl  schema_config.yaml
tests/final_type/: data.tsv  mapping.yaml
tests/from_subject/: biocypher_config.yaml  path.csv  path.py  path.yaml  schema.yaml  subset_data_for_test.py  test.sh  translate.tsv
tests/full_example/: config.yaml  data.csv  mapping.yaml  ontology.ttl  schema.yaml
tests/full_fledge_demo/: README.md
tests/json/: friends.json
tests/map_remove_forbidden_characters/: data.csv  mapping.yaml
tests/match_type_from_column/: data.csv  mapping.yaml
tests/mixin/: data.csv  mapping.yaml  schema_config.yaml
tests/multi_type_transformer/: mapping.yaml  schema_config.yaml
tests/multiple_databases/: cgi.yaml  data_oncokb_article.csv  oncokb.yaml
tests/oncokb/: data.csv  genomics_oncokbannotation.csv  mapping.yaml  oncokb.yaml  schema_config.yaml  types.py
tests/oncokb_article/: data_cgi_article.csv  data_oncokb_article.csv  genomics_oncokbannotation.csv  oncokb.py  oncokb_article.yaml  schema_config.yaml  types.py
tests/ontology_subtypes/: mapping.yaml  schema_config.yaml
tests/output_validation/: data.csv  mapping.yaml
tests/test_2ontologies/: biocypher.yaml  mapping.yaml  oim.csv  ontology1.ttl  pyproject.toml  schema.yaml
(+145 files in other folders)
