[tool.poetry]
name = "oncodashkb"
version = "0.1.0"
description = "Knowledge graph build for oncodash using BioCypher"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
biocypher = "^0.5.4"
pooch = "^1.7.0"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
